MR2-956 - Stop squishing the width of non-top ViewGroups. r=jhirsch
This width limit is a holdover from early days with the ActiveViewManager,
and wasn't part of any particular spec. It is limiting the width of non-top
items in the River, which causes favicons to get squished.

Differential Revision: https://phabricator.services.mozilla.com/D128773

--- a/browser/components/companion/content/components/view-group.css
+++ b/browser/components/companion/content/components/view-group.css
@@ -8,10 +8,6 @@
   justify-content: start;
 }
 
-:host(:not([top])[active]) > .view-el {
-  width: 200px;
-}
-
 .view-el > .view-loading-spinner-container {
   position: absolute;
   opacity: 0;
